--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,29 @@
 	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.emf.common_2.12.0.v20160420-0247.jar"/>
 	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/SweetHome3D-6.1.2-src"/>
+	<classpathentry kind="lib" path="lib/incident.design.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.fx.osgi_2.4.0.201605100504.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.osgi.compatibility.state_1.0.200.v20160504-1419.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.osgi_3.11.3.v20170209-1843.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.ui_3.108.1.v20160929-1045.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.ui.workbench_3.108.3.v20170216-1539.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.e4.ui.workbench3_0.13.100.v20160506-0759.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.swt_3.105.3.v20170228-0512.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.jface_3.12.2.v20170113-2113.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/javax.inject_1.0.0.v20091030.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.core.commands_3.8.1.v20161221-1651.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.core.runtime_3.12.0.v20160606-1342.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.equinox.common_3.8.0.v20160509-1230.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.core.jobs_3.8.0.v20160509-0411.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.equinox.registry_3.6.100.v20160223-2218.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.equinox.preferences_3.6.1.v20160815-1406.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.core.contenttype_3.5.100.v20160418-1621.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.equinox.app_1.3.400.v20150715-1528.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.core.resources_3.11.1.v20161107-2032.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.sirius_4.1.3.201701271256.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.sirius.common.acceleo.aql_4.1.3.201701271256.jar"/>
+	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.swt.win32.win32.x86_64_3.105.3.v20170228-0512.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/incidentpatternB"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/FR_Analyser"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
