--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,6 @@
 	<classpathentry kind="lib" path="D:/eclipse-neon3/plugins/org.eclipse.swt.win32.win32.x86_64_3.105.3.v20170228-0512.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/incidentpatternB"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/FR_Analyser"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/DataMiningTester"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
