--- a/.classpath
+++ b/.classpath
@@ -35,5 +35,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/FR_Analyser"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/DataMiningTester"/>
 	<classpathentry kind="lib" path="lib/richtextfx-fat-0.10.1.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/actionsCatalogueEditor"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
